app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-hw-deployment
  labels:
    app: prometheus-hw
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prometheus-hw
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prometheus-hw
    spec:
      containers:
        - name: kuber-hw
          image: >-
            docker.io/mvkoshenkova/kuberhw:v10
          ports:
            - name: web
              containerPort: 8080
