app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-hw-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: prometheus-hw
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-hw-service
                port: 
                  number: 9000
